--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,5 +38,7 @@
       <%= yield %>
       </div>
 
+<p class="page-footer">Designed &amp; Developed by Labaki - 2019  &copy;</p>
+
   </body>
 </html>
