--- a/app/assets/stylesheets/thumbs-gallery.scss
+++ b/app/assets/stylesheets/thumbs-gallery.scss
@@ -16,7 +16,7 @@ img{width: 400px}
   left:600px;
 }
 
-#les-merveilles-thumb{
+#les-merveilles-de-la-mer-thumb{
   position: absolute;
   top:300px;
   left:200px;
@@ -26,4 +26,11 @@ img{width: 400px}
   position: absolute;
   top:300px;
   left:200px;
+}
+
+#troisieme-projet-thumb{
+  position: absolute;
+  top:300px;
+  left:200px;
+
 }
