--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,12 +86,13 @@ opacity: 0.4;
 }
 
 .page-footer{
-  width: 100%;
+//  width: 100%;
   font-size: 10px;
-  margin-top: 50px;
-  bottom: 0;
-  padding-bottom: 5px;
+   // margin-top: 50px;
+//  padding-bottom: 5px;
   text-align: center;
+  // position: absolute;
+  bottom: 0;
 
 }
 ///////scrollTop
