--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,13 +86,11 @@ opacity: 0.4;
 }
 
 .page-footer{
-//  width: 100%;
-  font-size: 10px;
-   // margin-top: 50px;
-//  padding-bottom: 5px;
-  text-align: center;
-  // position: absolute;
-  bottom: 0;
-
+position: fixed;
+bottom: 0;
+font-size: 10px;
+left: 50%;
+transform: translateX(-50%);
+background-color: white;
 }
 ///////scrollTop
