--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,11 +86,12 @@ opacity: 0.4;
 }
 
 .page-footer{
-position: fixed;
-bottom: 0;
-font-size: 10px;
-left: 50%;
-transform: translateX(-50%);
-background-color: white;
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   text-align: center;
+   font-size: 10px;
+   background-color: white;
 }
 ///////scrollTop
