--- a/app/views/static_pages/construction.html+phone.erb
+++ b/app/views/static_pages/construction.html+phone.erb
@@ -9,7 +9,7 @@
   <div class="construction">
     <span class="inner-cons">
       <p id='construction-mobile'>under construction</p>
-      <p id="const-conact"><%= mail_to "info@labaki.design" , "contact" %></p>
+      <p id="const-conact"><%= mail_to "contact@labaki.design" , "contact" %></p>
   </span>
 </div>
 
