--- a/app/views/static_pages/construction.html.erb
+++ b/app/views/static_pages/construction.html.erb
@@ -8,7 +8,7 @@
 <body>
   <div class="construction">
     <span class="inner-cons">
-      <p id='construction'>under the construction</p>
+      <p id='construction'>under construction</p>
       <p id="const-conact"><%= mail_to "contact@labaki.design" , "contact" %></p>
   </span>
 </div>
