--- a/app/assets/stylesheets/thumbs-gallery.scss
+++ b/app/assets/stylesheets/thumbs-gallery.scss
@@ -1,36 +1,37 @@
+.thumbails-index-mobile{
+img{width: 100px}
+}
+
+#the-first-thumb-mobile , #le-premier-thumb-mobile{
+  position: absolute;
+  top:140px;
+  left:80px;
+}
+
+#the-second-thumb-mobile , #the-second-thumb-mobile{
+  position: absolute;
+  top:180px;
+  left:100px;
+}
+
+.invisible{display: none};
+.visible{display: block;}
+
+
+
+///////////////////////////DESKTOP ///////
 .thumbails-index{
 display: none;
-img{width: 400px}
+img{width: 200px}
+}
+#the-first-thumb , #le-premier-thumb{
+  position: absolute;
+  top:140px;
+  left:80px;
 }
 
-#le-livre-de-sophie-thumb{
+#the-second-thumb , #the-second-thumb{
   position: absolute;
-  top:150px;
-  left:500px;
-}
-
-
-#the-wonders-of-the-sea-thumb{
-  position: absolute;
-  top:200px;
-  left:600px;
-}
-
-#les-merveilles-de-la-mer-thumb{
-  position: absolute;
-  top:300px;
-  left:200px;
-}
-
-#le-premier-thumb{
-  position: absolute;
-  top:300px;
-  left:200px;
-}
-
-#troisieme-projet-thumb{
-  position: absolute;
-  top:300px;
-  left:200px;
-
+  top:180px;
+  left:300px;
 }
