--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -12,29 +12,61 @@
   </head>
 
   <body>
+    <!--
     <div class="navigation-mobile">
       <div class="logo">Le LOGO</div>
-      <div></div>
-      <div class="links-nav-mobile">
-      <div class="projects-nav">
-      <span id="project-span">Projects</span>
-        <div class="nav-inner">
-        <p> <%= link_to t('all-projects'), projects_path %></p>
-        <p><%= link_to t('graphic-design'), projects_path(:category => "graphic") %></p>
-        <p> <%= link_to t('industrial-design'), projects_path(:category => "industrial") %></p>  </div>
-        </div>
-      <div class="static">
-        <%= link_to t('about') , about_path %></div>
-      <div>  <%= link_to "Contact" , contact_path %></div>
-      <div class="languages"><%= link_to_unless_current 'EN' , locale: 'en' %> | <%= link_to_unless_current 'FR' , locale: 'fr' %></div>
-    </div>
+<div class="links-nav-mobile"></div>
+      <ul id="links-nav-mobile">
+          <li class="projects-nav-mobile">
+            <ul id="projects-nav">Projects
+              <li> <%= link_to t('all-projects'), projects_path %></li>
+            <li><%= link_to t('graphic-design'), projects_path(:category => "graphic") %></li>
+            <li> <%= link_to t('industrial-design'), projects_path(:category => "industrial") %></li>
+          </ul>
+        </li>
+      <li class="static"> <%= link_to t('about') , about_path %></li>
+      <li> <%= link_to "Contact" , contact_path %></div>
+      <li class="languages"><%= link_to_unless_current 'EN' , locale: 'en' %> | <%= link_to_unless_current 'FR' , locale: 'fr' %></li>
 
+</ul>
 </div>
+-->
+<div class="navigation-mobile">
+  <div class="all-links">
+    <div class="top">
+  <div id="hamburger">
+    <div class="patty"></div>
+    <div class="patty"></div>
+    <div class="patty"></div>
+  </div>
+  <div id="close" class="invisible"><%= inline_svg 'close.svg' %></div>
+  <div id="logo">LABAKI</div>
+
+  </div>
+  <div class="inner-navigation ">
+  <ul>
+    <li> <ul id="inner-projects">Projects
+            <li class= "inner-projects">All</li>
+            <li class= "inner-projects">industrial</li>
+            <li class= "inner-projects">Graphic</li>
+          </ul>
+
+    </li>
+    <li>About</li>
+    <li>Contact</li>
+    <li>languages</li>
+  </ul>
+</div>
+</div>
+</div>
+
+
 
 
 <div class="main-container-mobile">
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+
 <%= yield %>
       </div>
   </body>
