--- a/app/views/projects/show.html+phone.erb
+++ b/app/views/projects/show.html+phone.erb
@@ -1,21 +1,21 @@
 <% provide(:title, @project.title) %>
-<div class="show-project">
+<div class="show-project-mobile">
 
-<div class="project-texts">
-  <p class="show-project-title" id="project-title"><%= @project.title%></p>
-  <p><%= @project.subcategory %></p>
-  <p class="show-project-body"><%= @project.body.html_safe%></p>
+<div class="project-texts-mobile">
+  <p class="show-project-title" id="project-title-mobile"><%= @project.title%></p>
+  <p id="subcat-mobile"><%= @project.subcategory %></p>
+  <p class="show-project-body-mobile"><%= @project.body.html_safe%></p>
 </div>
 
 
-<div class="images-block">
+<div class="images-block-mobile">
 <% @project.images.each do |i| %>
 <div><%= image_tag (i.url)%></div>
 <% end %>
 </div>
 
 
-<div class="in-project-nav">
+<div class="in-project-nav-mobile">
   <% if @project.previous%><%= link_to @project.previous do %>
     <div class="in-project prev-project">
     <div> <%= inline_svg "arrow-inner.svg" , id: "arrow-inner-prev" , class: "arrow-inner"%></div>
@@ -24,8 +24,7 @@
   <%end%> <!-- end of do -->  <%else%> <div></div><%end%> <!-- end of if -->
 
 
-
-  <div class="back-home"><%= link_to t("the-projects"), projects_path %> </div>
+<div class="back-home"><%= link_to t("the-projects"), projects_path %> </div>
 
 <% if @project.next%><%= link_to @project.next do %>
 <div class="in-project next-project">
@@ -35,7 +34,6 @@
 
 
 <%end%> <%end%>
-
 
 
 
