--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 html{ overflow-x: hidden;}
+body{overflow-x: hidden;}
 .navigation-mobile{
   display: inline-grid;
   width: 100%;
@@ -17,6 +18,7 @@ html{ overflow-x: hidden;}
   margin-top: 50px;
   width: 100%;
   margin-left: 10px;
+  overflow-x: hidden;
 }
 
 #hamburger{
