--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -23,7 +23,7 @@ a{color: $main-color; text-decoration: none}
 }
 
 
-.subcat{margin-left: 20px; font-family: 'Untitled Sans' , sans-serif;; font-size: 1em; color: $main-color;}
+.subcat{margin-left: 20px; font-family: 'Untitled Sans' , sans-serif;font-size: 1em; color: $main-color;}
 hr{ color: $main-color; margin-top:0px;}
 
   ///////HETERODOX EASTER EGG////////////
