--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,7 +5,7 @@
 <div class="single-project <%= p.title.parameterize%>">
       <div class="project-info"><div class="project-title"> <%= link_to project_path(p) do %><%= p.title %><%end%> </div></div>
       <div class="subcat"><%= p.subcategory %> </div>
-      <% p.thumbnails.each do |th| %><div class="thumbails-index" id= "<%=p.title.parameterize%>-thumb" ><%= image_tag (th.url)%></div><% end %>
+      <% p.thumbnails.each do |th| %><div class="thumbails-index" id= "<%=p.code%>-thumb" ><%= image_tag (th.url)%></div><% end %>
 </div>
 <!-- <hr class="separateur"> -->
 
@@ -21,9 +21,9 @@
 <% @projects.each do |p| %>
  <script type="text/javascript">
 $('.<%=p.title.parameterize %> a ').hover(function(){
-$('#<%=p.title.parameterize%>-thumb').fadeIn()});
+$('#<%=p.code%>-thumb').fadeIn()});
 $('.<%=p.title.parameterize %> a ').mouseleave(function(){
-$('#<%=p.title.parameterize%>-thumb').fadeOut()});
+$('#<%=p.code%>-thumb').fadeOut()});
 <% if p.nouveau? %>
 $('.<%=p.title.parameterize %>').addClass('new-project')
 <%end%>
