--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -15,6 +15,10 @@
     </div>
   <% end %>
 
+  <p>
+    <%= form.label :code %><br>
+    <%= form.text_area :code ,size: "30x1"%>
+  </p>
 
       <p>
         <%= form.label t('record')%><br>
