--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -5,7 +5,7 @@
       <div class="project-info"><div class="project-title-mobile"> <%= p.title %></div></div>
       <div class="subcat-mobile"><%= p.subcategory %> </div>
       <div class="arrow-click invisible" id="<%=p.title.parameterize%>-arrow"> <%= link_to project_path(p) do%> <%= inline_svg 'arrow-click.svg'%> <%end%></div>
-      <% p.thumbnails.each do |th| %><div class="thumbails-index-mobile invisible" id= "<%=p.title.parameterize%>-thumb-mobile" ><%= image_tag (th.url)%></div><% end %>
+      <% p.thumbnails.each do |th| %><div class="thumbails-index-mobile invisible" id= "<%=p.code%>-thumb-mobile" ><%= image_tag (th.url)%></div><% end %>
 </div>
 
 <%end%>
@@ -23,12 +23,12 @@
   $('.arrow-click').removeClass('visible')
   $(this).find('.arrow-click').addClass('visible');
   $('.thumbails-index-mobile').removeClass('visible')
-  $('#<%=p.title.parameterize%>-thumb-mobile').addClass('visible', 1000);
+  $('#<%=p.code%>-thumb-mobile').addClass('visible', 1000);
 
   })
   $(document).click(function(event) {
     if (!$(event.target).closest(".single-project-mobile.<%=p.title.parameterize%>").length) {
-      $("body").find("#<%=p.title.parameterize%>-thumb-mobile").removeClass('visible', 1000);
+      $("body").find("#<%=p.code%>-thumb-mobile").removeClass('visible', 1000);
       $("body").find("#<%=p.title.parameterize%>-arrow").removeClass('visible', 1000);
 
 }});
