--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -13,6 +13,7 @@ body{overflow-x: hidden;}
 
 }
 
+.new-project-mobile{color: $new-project !important;}
 
 .main-container-mobile{
   margin-top: 20px;
