--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -19,13 +19,23 @@
 <script type="text/javascript" data-turbolinks-eval=false>
 
 <% @projects.each do |p| %>
+
+<% if p.nouveau? %>
+console.log("<%=p.title%>")
+$(".<%=p.title.parameterize%> .project-title-mobile").addClass('new-project-mobile');
+<%end%>
+
   $('.single-project-mobile.<%=p.title.parameterize%>').click(function(){
   $('.arrow-click').removeClass('visible')
   $(this).find('.arrow-click').addClass('visible');
   $('.thumbails-index-mobile').removeClass('visible')
   $('#<%=p.code%>-thumb-mobile').addClass('visible', 1000);
 
-  })
+
+
+
+});
+
   $(document).click(function(event) {
     if (!$(event.target).closest(".single-project-mobile.<%=p.title.parameterize%>").length) {
       $("body").find("#<%=p.code%>-thumb-mobile").removeClass('visible', 1000);
@@ -35,9 +45,7 @@
 
 
 
-<% if p.nouveau? %>
-$('.<%=p.title.parameterize %>').addClass('new-project');
-<%end%>
+
 <%end%>
 
 $('.heterodox-mobile').click(function(){
