--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -11,8 +11,9 @@
       font-family: 'Untitled Sans';
       src:font-url('UntitledSansWeb.ttf');}
 
-  $main-color: #101D6B;
+  $main-color: #334987;
   $sec-color: #535353;
   $hx-black: #535353;
-  $new-project: red;
-  $highlight: #526232;
+  $new-project: #84121D;
+  $highlight: #84121D;
+  $body-color: #F7F5F5;
