--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -12,25 +12,7 @@
   </head>
 
   <body>
-    <!--
-    <div class="navigation-mobile">
-      <div class="logo">Le LOGO</div>
-<div class="links-nav-mobile"></div>
-      <ul id="links-nav-mobile">
-          <li class="projects-nav-mobile">
-            <ul id="projects-nav">Projects
-              <li></li>
-            <li></li>
-            <li>  %></li>
-          </ul>
-        </li>
-      <li class="static"> </li>
-      <li> </div>
-      <li class="languages"></li>
 
-</ul>
-</div>
--->
 
 <div class="navigation-mobile">
   <div class="all-links">
@@ -41,7 +23,7 @@
     <div class="patty"></div>
   </div>
   <div id="close" class="invisible"><%= inline_svg 'close.svg' %></div>
-  <div id="logo">LABAKI</div>
+  <div id="logo-mobile" class="logo-mobile"> <%= link_to projects_path do %><%= inline_svg 'labaki-logo.svg'%> <% end %></div>
 
   </div>
   <div class="inner-navigation ">
