--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -29,10 +29,12 @@ hr{ color: $main-color; margin-top:0px;}
   ///////HETERODOX EASTER EGG////////////
 
   .heterodox{
+    position: fixed;
+    bottom: 30px;
     opacity: .1;
     margin-top: 30px;
     color: $hx-black;
-    width: 30%;
+    width: 20%;
     font-size: .9em;
     a{text-decoration: none; color: $hx-black}
     #heterodox-logo{width:50%; path{fill: $hx-black;}}
