heterodox bug fix

--- a/app/views/projects/index.html+phone.erb
+++ b/app/views/projects/index.html+phone.erb
@@ -46,7 +46,7 @@ $(".<%=p.title.parameterize%> .project-title-mobile").addClass('new-project-mobi
 
 
 $('.heterodox-mobile').click(function(){
-  $(this).toggleClass('heterodox-mobile-active')
+  $(this).addClass('heterodox-mobile-active')
 });
 
 $(document).click(function(event) {
