--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <div class="navigation">
-      <div class="logo" id="nav-logo"><%= link_to projects_path do %> <%= inline_svg 'labaki-logo.svg'%> <% end %></div>
+      <div class="logo" id="nav-logo"><%= link_to projects_path do %> <%= inline_svg 'labaki-logo.svg' , title: t('home')%> <% end %></div>
       <div></div>
       <div class="links-nav">
         <div class="projects-nav">
