--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -121,3 +121,12 @@ ul {
   svg{path{fill:$main-color}}
 
 }
+
+.about-text-mobile{
+  width: 80%;
+  p{
+    margin-top: 50px;
+    font-size: .9em;
+
+  }
+}
