--- a/app/views/static_pages/about.html+phone.erb
+++ b/app/views/static_pages/about.html+phone.erb
@@ -1,5 +1,5 @@
 <% provide(:title, t('about')) %>
 
-<div class="about-text">
+<div class="about-text-mobile">
 <p><%=t('about-text') %></p>
 </div>
