--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,6 @@ p{font-family: 'Untitled Sans', sans-serif; color: $sec-color;}
 
 }
 
-.logo{align-self: center;}
 
 #nav-logo{
   width: 40%;
@@ -94,10 +93,16 @@ opacity: 0.4;
    left: 0;
    right: 0;
    text-align: center;
-   font-size: 10px;
+   font-size: 12px;
    color: #424141;
    margin: 0;
-   padding: 3px;
+   padding: 20px;
    background-color: $body-color;
 }
 ///////scrollTop
+
+.about-text{
+  width: 60%;
+  font-size: 17px;
+  p{margin-top: 150px;}
+}
