--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       <%= yield %>
       </div>
 
-<p class="page-footer">Designed &amp; Developed by Labaki - 2019  &copy;</p>
+<p class="page-footer">&copy; designed &amp; developed by Labaki - 2020  </p>
 
   </body>
 </html>
