--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,3 @@
 <% provide(:title, 'Contact') %>
 
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<p><%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %></p>
