--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
             </div>
 
             <div class="static">
-              <%= link_to t('about') , about_path %></div>
-              <div class="contact">  <%= link_to "Contact" , contact_path%></div>
+              <%= link_to t('info') , info_path %></div>
               <div class="languages"><%= link_to 'EN' , locale: 'en' %> | <%= link_to 'FR' , locale: 'fr' %></div></div>
 
 </div>
