--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -35,8 +35,7 @@
           </ul>
 
     </li>
-    <li><%= link_to t('about') , about_path %></li>
-    <li><%= link_to "Contact" , contact_path %></li>
+    <li><%= link_to t('info') , info_path %></li>
     <li class="languages"><%= link_to_unless_current 'EN' , locale: 'en' %> | <%= link_to_unless_current 'FR' , locale: 'fr' %></li>
   </ul>
 </div>
