--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -122,11 +122,12 @@ ul {
 
 }
 
-.about-text-mobile{
-  width: 80%;
-  p{
-    margin-top: 50px;
-    font-size: .9em;
 
-  }
+.info-container-mobile{ width: 80%;
+  margin-top: 70px;  font-size: 15.5px;
+  .header-a{color: black; font-size: 22px; margin-bottom: 0px;}
+  p{ margin: 10px 0px;   a{ color: $new-project}
+}
+.contact{margin-top: 50px;}
+
 }
