--- a/app/views/static_pages/info.html+phone.erb
+++ b/app/views/static_pages/info.html+phone.erb
@@ -1,9 +1,17 @@
 <% provide(:title, t('info')) %>
 
-<div class="about-text-mobile">
-  <h1>About</h1>
-<p><%=t('about-text') %></p>
-<h1>Contact</h1>
-<p><%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %></p>
+<div class="info-container-mobile">
 
+<div class="about-text-mobile">
+<p class='header-a'><%=t('about') %></p>
+<p class="inner-content"><%=t('about-text') %></p>
+</div>
+
+
+<div class="contact">
+  <p class='header-a'>Contact</p>
+  <p class="inner-content"> <%= t('reach-out') %>  <%=link_to 'Instagram' , 'https://www.instagram.com/labaki_design/' , target: "_blank" %>, <%= t('medium') %> <%= mail_to "contact@labaki.design" , "email," %>
+  <br> <%= t('byphone') %> <a href="tel:+961 70 047 045">+961 70 047 045</a>
+  </p>
+</div>
 </div>
