fix mobile + footer

--- a/app/views/layouts/application.html+phone.erb
+++ b/app/views/layouts/application.html+phone.erb
@@ -51,5 +51,7 @@
 
 <%= yield %>
 </div>
+<p class="page-footer-mobile">&copy; designed &amp; developed by Labaki - 2020  </p>
+
   </body>
 </html>
