--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,8 +93,20 @@ opacity: 0.4;
    left: 0;
    right: 0;
    text-align: center;
-   font-size: 12px;
-   color: #424141;
+   font-size: 11px;
+   color: #a9a9a9;
+   margin: 0;
+   padding: 20px;
+   background-color: $body-color;
+}
+.page-footer-mobile{
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   text-align: center;
+   font-size: 9.5px;
+   color: #a9a9a9;
    margin: 0;
    padding: 20px;
    background-color: $body-color;
