--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,7 +108,7 @@ opacity: 0.4;
    font-size: 9.5px;
    color: #a9a9a9;
    margin: 0;
-   padding: 20px;
+   padding: 10px;
    background-color: $body-color;
 }
 ///////scrollTop
@@ -120,7 +120,7 @@ opacity: 0.4;
 
 .info-container{
   margin-top: 70px;  font-size: 17px;
-  .header-a{color: black; font-size: 22px; margin-bottom: 0px;}
+  .header-a{color: $header-black; font-size: 22px; margin-bottom: 0px;}
   p{ margin: 10px 0px;   a{ color: $new-project}
 }
 }
