--- a/app/assets/stylesheets/construction.scss
+++ b/app/assets/stylesheets/construction.scss
@@ -5,8 +5,21 @@
    left: 0;
    right: 0;
    text-align: center;
-   font-size: 10px;
-   background-color: white;
+   font-size: 11px;
+   font-family: 'Untitled Sans' , sans-serif;
+   color: #a9a9a9;
+
+}
+.page-footer-mobile{
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   text-align: center;
+   font-size: 9.5px;
+   color: #a9a9a9;
+   margin: 0;
+   padding: 10px;
    font-family: 'Untitled Sans' , sans-serif;
 }
 
