--- a/app/views/static_pages/construction.html+phone.erb
+++ b/app/views/static_pages/construction.html+phone.erb
@@ -14,5 +14,5 @@
 </div>
 
 
-<p class="page-footer">Designed &amp; Developed by Labaki - 2019  &copy;</p>
+<p class="page-footer-mobile"> &copy; designed &amp; developed by Labaki - 2020  </p>
 </body>
