--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,9 +3,13 @@
 <% @projects.each do |p| %>
 
 <div class="single-project <%= p.title.parameterize%>">
-      <div class="project-info"><div class="project-title"> <%= link_to project_path(p) do %><%= p.title %><%end%> </div></div>
-      <div class="subcat"><%= p.subcategory %> </div>
-      <% p.thumbnails.each do |th| %><div style="top:<%= p.topos %>px ; left:<%= p.leftpos%>px" class="thumbails-index" id= "<%=p.code%>-thumb" ><%= image_tag (th.url)%></div><% end %>
+    <div class="project-info">
+      <div class="project-title"> <%= link_to project_path(p) do %><%= p.title %><%end%> </div>
+    </div> <div class="subcat"><%= p.subcategory %> </div>
+
+      <% p.thumbnails.each do |th| %>
+      <div style="top:<%= p.topos %>px ; left:<%= p.leftpos%>px" class="thumbails-index" id= "<%=p.code%>-thumb" ><%= image_tag (th.url)%></div>
+      <% end %>
 </div>
 
 <%end%>
@@ -21,8 +25,11 @@
  <script type="text/javascript">
 $('.<%=p.title.parameterize %>  ').mouseenter(function(){
 $('#<%=p.code%>-thumb').show()});
+
 $('.<%=p.title.parameterize %>  ').mouseleave(function(){
 $('#<%=p.code%>-thumb').hide()});
+
+
 <% if p.nouveau? %>
 $('.<%=p.title.parameterize %>').addClass('new-project')
 <%end%>
